[tool.poetry]
name = "annotate"
version = "0.1.5"
description = "Python Annotation System Inspired by Java Annotations"
authors = ["Tom Bulled <26026015+tombulled@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tombulled/annotate"
repository = "https://github.com/tombulled/annotate"
keywords = ["python", "annotate", "label", "mark", "tag"]

[tool.poetry.dependencies]
python = "^3.9"
stash = {git = "https://github.com/tombulled/stash.git", rev = "v0.1.3"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"