[tool.poetry]
name = "annotate"
version = "0.1.6"
description = "Python Annotation System Inspired by Java Annotations"
authors = ["Tom Bulled <26026015+tombulled@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tombulled/annotate"
repository = "https://github.com/tombulled/annotate"
keywords = ["python", "annotate", "annotation", "marker", "label", "mark", "tag"]

[tool.poetry.dependencies]
python = "^3.8"
stash = {git = "https://github.com/tombulled/stash.git", tag = "v0.1.3"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"