[tool.poetry]
name = "tombulled-annotate"
version = "0.1.11"
description = "Python Annotation System Inspired by Java Annotations"
authors = ["Tom Bulled <26026015+tombulled@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tombulled/annotate"
repository = "https://github.com/tombulled/annotate"
keywords = ["python", "annotate", "annotation", "marker", "label", "mark", "tag"]
packages = [
    {include = "annotate"}
]

[tool.poetry.dependencies]
python = "^3.8"
attribute = "^0.1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"